[tool.poetry]
name = "proteus"
version = "0.0.0"
description = "Logging, data connectors, monitoring, secret handling and general lifehacks to make data people lives easier."
authors = ["ECCO Sneaks & Data <esdsupport@ecco.com>"]
maintainers = ['GZU <gzu@ecco.com>', 'JRB <ext-jrb@ecco.com>']
license = 'Proprietary'
readme = "README.md"
repository = 'https://github.com/SneaksAndData/proteus'

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26"
cryptography = "~36.0"
deltalake = "~0.6.0"
pandas = ">1.3,<1.5"
pyarrow = ">=7.0"
dataclasses-json = "~0.5.7"

azure-identity = { version = "~1.7", optional = true }
azure-storage-blob = { version = ">12.7.0,<=12.10.0", optional = true }
azure-mgmt-storage = { version = "~19.1.0", optional = true }
azure-keyvault-secrets = { version = "^4.3", optional = true }
azure-servicebus = { version = "~7.3", optional = true }
adlfs = {version='~2022', optional = true}

datadog = { version = "~0.44.0", optional = true }
datadog-api-client = { version = "~1.12.0", optional = true }

kubernetes = { version = "24.2.0", optional = true }

JSON-log-formatter = "~0.5.1"

pycryptodome = { version = "~3.15", optional = true }
pyjwt = { version = "~2.4.0", optional = true }

SQLAlchemy = { version = "~1.4", optional = true }
pyodbc = { version = "~4.0", optional = true }

[tool.poetry.extras]
azure = [
    'azure-identity',
    'azure-storage-blob',
    'azure-mgmt-storage',
    'azure-keyvault-secrets',
    'azure-servicebus',
    'adlfs'
]
datadog = [
    'datadog',
    'datadog-api-client',
    'kubernetes'
]
boxer = [
    'pycryptodome',
    'pyjwt'
]
databases = [
    'SQLAlchemy',
    'pyodbc'
]

[tool.poetry.dev-dependencies]
pytest = "~6.2"
pytest-mock = "~3.6.1"
pytest-cov = "~2.12"
pylint = "^2.12"
requests = "~2.27"
cryptography = "~36.0"
pandas = "~1.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
